@@ -546,5 +546,12 @@
   // Whether Orthanc transcodes DICOM files to an uncompressed
   // transfer syntax over the DICOM protocol, if the remote modality
   // does not support compressed transfer syntaxes (new in Orthanc 1.7.0).
-  "TranscodeDicomProtocol" : true
+  "TranscodeDicomProtocol" : true,
+
+  // If some plugin to decode/transcode DICOM instances is installed,
+  // this option specifies whether the built-in decoder/transcoder of
+  // Orthanc (that uses DCMTK) is applied before or after the plugins,
+  // or is not applied at all. The allowed values for this option are
+  // "After" (default value), "Before", or "Disabled". (new in Orthanc 1.7.0)
+  "BuiltinDecoderTranscoderOrder" : "After"
 }
